<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:stretchColumns="1" >

    <TableRow
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masv" />

        <EditText
            android:id="@+id/idsv"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:background="@drawable/etxt"
            android:hint="@string/entermasv"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hovaten" />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:background="@drawable/etxt"
            android:hint="@string/enterhoten"
            android:paddingLeft="5dp"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:id="@+id/lop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clas" />

        <EditText
            android:id="@+id/classStudent"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:background="@drawable/etxt"
            android:hint="@string/enterclass"
            android:paddingLeft="5dp"
            android:textSize="14sp" >
        </EditText>
    </TableRow>

    <TableRow
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex" />

        <RadioGroup android:id="@+id/sex" >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>
    </TableRow>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/btn_add_update_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_margin="2dp"
            android:background="@drawable/btn_bgr"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/add"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</TableLayout>